--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -65,8 +65,8 @@
 \newcommand{\mwebv}{MWEBV}
 \newcommand{\hostlib}{{\sc hostlib}}
 
-\newcommand{\Zphot}{Z_{\rm phot}}
-\newcommand{\Zspec}{Z_{\rm spec}}
+\newcommand{\Zphot}{z_{\rm phot}}
+\newcommand{\Zspec}{z_{\rm spec}}
 
 \newcommand{\eff}{efficiency}
 \newcommand{\effs}{efficiencies}
@@ -3083,9 +3083,55 @@ in the file argument of {\tt SEARCHEFF\_zHOST\_FILE}.
 Lastly, for published results we recommend putting measured \eff\ 
 files in the public area \\ {\tt \$SNDATA\_ROOT/models/searcheff}.
 
-
 % ------------------------------------
   \clearpage
+   \subsubsection{Simulating and Fitting Mix of $\Zspec$ and $\Zphot$ From Host Galaxy}
+   \label{sssec:sim_zmix}
+% ------------------------------------
+
+For future surveys, it may be interesting to consider a mix of redshift sources:
+spectroscopic host redshifts ($\Zspec$) measured at lower redshifts, 
+and photometric host redshifts ($\Zphot$) measured at higher redshifts.
+This mix-$z$ simulation requires two inputs: 1) {\tt SEARCHEFF\_zHOST\_FILE} 
+specifying \eff\ vs. redshift of acquiring $\Zspec$ of the host, and
+2) {\tt ZPHOT} and {\tt ZPHOTERR} columns in the {\tt HOSTLIB}, or use the
+{\tt HOSTLIB\_GENZPHOT\_FUDGEPAR} input (\S\ref{sss:hostlib_options}).
+The relevant sim-inputs are:
+%
+\begin{Verbatim}
+   APPLY_SEARCHEFF_OPT:   1        # apply software trigger only
+   SEARCHEFF_zHOST_FILE:    SEARCHEFF_zHOST.DAT
+\end{Verbatim}
+%
+The {\tt zHOST} efficiency map is used first to determine if the event has an accurate $\Zspec$.
+If there is no $\Zspec$, then the redshift is taken from {\tt ZPHOT} and {\tt ZPHOTERR}.
+Note that {\tt REDSHIFT\_FINAL[\_ERR]} in the data file is either $\Zspec$ or {\tt ZPHOT},
+so there is only one redshift variable to access in the analysis. Supplemental data variables
+{\tt HOSTGAL\_ZSPEC} and {\tt HOSTGAL\_ZPHOT} are also available, for example,
+to compare $\Zphot$ against $\Zspec$ in the subset for which both are available.
+
+In the light curve fitting stage, use {\tt \&FITINP} namelist option  {\tt OPT\_PHOTOZ=2}
+to perform a  5-parameter $\Zphot$ fit with the host redshift as a prior (\S\ref{subsec:photoz}).
+The $z$-prior is a Gaussian with mean and $\sigma$ taken from {\tt REDSHIFT\_FINAL[\_ERR]}. 
+The value of  {\tt REDSHIFT\_FINAL\_ERR} is much smaller for $\Zspec$
+events compared with $\Zphot$ events. For $\Zspec$ events, the small $\sigma$ value
+results in such a strong $z$-prior that the fit is essentially a 4-parameter fit with fixed redshift.
+To validate this process, plot the following
+from the output {\tt FITRES} table,
+\begin{Verbatim}
+    zHD - SIM_ZCMB vs. SIM_ZCMB
+    zHDERR vs. SIM_ZCMB
+\end{Verbatim}
+
+\medskip
+\noindent Example input files for WFIRST are provided in
+\vspace{-0.2cm}
+\begin{Verbatim}
+  $SNDATA_ROOT/sample_input_files/WFIRST_zspec+zphot 
+\end{Verbatim}
+
+% ------------------------------------
+%  \clearpage
    \subsubsection{Determining $\simeffspec$}
    \label{sssec:simeffspec}
 % ------------------------------------
